2022-02-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove old (hg) release instructions

	* admin/RELEASE.md: Deleted

2022-02-03  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_predict_leaveoneout.m: Avoid complex-valued norm_res

	* model/@stk_model_gpposterior/stk_predict_leaveoneout.m: Prevent
	norm_res from being complex-valued by cancelling negative elements
	in dR.

	stk_plot_histnormres.m: Ensure non-zero binsize

	* utils/stk_plot_histnormres.m: Introduce a safety net for samples
	with small (possibly zero) IQR.

2022-01-31  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_histnormres.m: Ensure non-zero number of bins

	* utils/stk_plot_histnormres.m: Make sure that we have a non-zero
	number of bins using Sturges' rule.

2022-01-28  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove the MOLE from the Octave package entirely

	* stk_init.m: Update comments.
	* admin/octpkg/patches/stk-init-mole-cleanup.patch: Rename from.
	* admin/octpkg/patches/stk-init-mole-delete.patch: Rename to.
	Delete everything related to the MOLE inside stk_init.
	* admin/octpkg/patches/series: Refresh.
	* admin/octpkg/post_install.m: Delete (no longer needed).
	* admin/build_tools/build_octpkg.m: Refresh.

	Raise required Octave version number to 4.0.0

	* README.md: Raise required Octave version number to 4.0.0.
	* admin/build_tools/build_octpkg.m: Iem.
	* admin/CODING_GUIDELINES: Update.
	* arrays/@stk_hrect/stk_hrect.m: Refer to CG#08.
	* misc/test/stk_runtests.m: Remove reference to 3.8.2.

	Avoid using isrow

	* admin/CODING_GUIDELINES: Explain why.
	* misc/mole/isrow/isrow.m: Delete.
	* stk_init.m: isrow removed from the MOLE.
	* misc/mole/README: Minor update.
	* admin/octpkg/patches/stk-init-mole-cleanup.patch: Refresh patch.
	* arrays/@stk_dataframe/plot.m: Don't use isrow.
	* misc/pareto/stk_dominatedhv.m: Don't use isrow.

2022-01-26  Julien Bect  <julien.bect@centralesupelec.fr>

	MOLE: linsolve is no longer needed
