@@ -169,6 +169,7 @@ regex_copy_src = '\.[ch]$';
 
 if ~ isempty (regexp (s, regex_ignore, 'once')) ...
         || strcmp (s, 'Makefile') ...
+        || strcmp (s, 'startup.m') ...
         || strcmp (s, 'misc/mole/README') ...
         || strcmp (s, 'misc/distrib/README') ...
         || strcmp (s, 'misc/pareto/private/wfg.README') ...
